Changelog
=========

Version 1.94
	Fixed bug: difftool only worked in git > 1.7.0
	Fixed bug: dashboard caused application to crash
	Fixed bug: refreshing gravatar that was already deleted caused an exception
	Fixed bug: when clicking "dictionary" submenu in spelling checker context menu the current word was replaced
	Fixed bug: ctrl-a in FileStatusListBox not working
	Added Japanese translation
	Added option to mark ill formed commit messages
	Added the ability to move to the prev/next quickseach string by hitting alt+arrowup/alt+arrowdown
	Added plugin to start gource
	Quicksearch now also searches in branches
	All windows positions are now saved	
	Settings dialog performance improved
	The scoll position in file viewer is saved when switching revision.
	Author image size can be set in context menu of gravatar control

Version 1.93
	Fixed bug: wrong icon drawn in commit dialog for deleted files
	Reset selected files in the commit dialog asks to delete new files.
	Author images are only cached for 5 days now
	Added start page
	Added 'force' option to checkout revision and checkout branch
	Added 'rebase' to context menu in revision grid
	Added 'reset chunk of file' option to commit dialog
	Added drop down menu to the 'open' button in the browse dialog
	Added support for WinMerge as diff tool

Version 1.92
	Fixed bug: the application hangs randomly
	Fixed bug: quotes in local settings were not escaped properly
	Fixed progress bar when pulling and fetching under git > 1.7.1
	There is a new installer to address the following issues (thanks to Jacob Stanley)
		Updating existing installations
		Install both 32bits and 64bits shell extension on 64bit systems
	Added icons to indicate if a files is added, modified or removed
	Author images from gravatar.com added to commit info panel
	User Manual updated
	Added quicksearch on author and message in revision grid
	Added commitinfo panel to blame view

Version 1.91
	Fixed bug: tooltips drawn incorrect

Version 1.90